tests/errors/bool_dunder_return_integer.ki
class BadBool:
    var _init_ = Function(self):
        self.x = 1
    var _bool_ = Function(self):
        return 1

discard Bool(BadBool())
